[project]
name = "wren-tools"
version = "0.4.1"
description = "The simplest task management system with the most advanced features"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "croniter==2.0.1",
  "pathvalidate==3.2.0",
  "platformdirs==4.1.0",
  "python-dateutil==2.8.2",
  "pytz==2023.3.post1",
  "requests==2.31.0",
  "six==1.16.0",
  "urllib3==2.1.0",
]
classifiers = ["License :: OSI Approved :: MIT License"]
keywords = ["note taking", "todo", "to do", "task management"]

[project.optional-dependencies]
telegram = [
  "telebot==0.0.5",
  "tzlocal==5.2",
  "idna==3.6",
  "APScheduler==3.10.4",
  "pyTelegramBotAPI==4.14.1",
  "certifi==2023.11.17   ",
  "charset-normalizer==3.3.2",
]
http = ["bottle==0.12.25"]
matrix = ["APScheduler==3.10.4", "simplematrixbotlib==2.10.3"]

[project.urls]
Homepage = "https://github.com/bjesus/wren"

[project.scripts]
wren = "wren.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = []
