[metadata]
name = wren_notes
version = attr: wren.core.__version__
author = Yo'av Moshe
author_email = wren@yoavmoshe.com
description =  The simplest task management system with the most advanced features 
keywords = note taking, todo, to do, task management


[options]
packages = find:
install_requires =
    croniter==2.0.1
    pathvalidate==3.2.0
    platformdirs==4.1.0
    python-dateutil==2.8.2
    pytz==2023.3.post1
    requests==2.31.0
    six==1.16.0
    urllib3==2.1.0

[options.extras_require]
telegram =
    telebot==0.0.5
    tzlocal==5.2
    idna==3.6
    APScheduler==3.10.4
    pyTelegramBotAPI==4.14.1
    certifi==2023.11.17   
    charset-normalizer==3.3.2
http =
    bottle==0.12.25

[options.entry_points]
console_scripts = 
    wren = wren.cli:main
